<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_sales"
        android:title="@string/main_nav_sales"
        android:icon="@drawable/ic_basket"
        android:checkable="true"/>
    <item
        android:id="@+id/nav_receipt"
        android:title="@string/main_nav_receipt"
        android:icon="@drawable/ic_receipt"
        android:checkable="true"/>
    <item
        android:id="@+id/nav_shift"
        android:title="@string/main_nav_shift"
        android:icon="@drawable/ic_time"
        android:checkable="true"/>
    <item
        android:id="@+id/nav_item"
        android:title="@string/main_nav_item"
        android:icon="@drawable/ic_list"
        android:checkable="true"/>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/main_nav_settings"
        android:icon="@drawable/ic_setting"
        android:checkable="true"/>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/main_nav_logout"
        android:checkable="true"/>

</menu>